tests/NormalTests/paczka1/small_fuzzy/51431452.err
Error in line 3: A557 S577 79,3
Error in line 13: P00iSrajb9 S641 76,7
